# fire-dl

./: Cargo.toml  README.md
src/: args.rs  download.rs  main.rs  scan.rs  utils.rs
