[package]
name = "fire-dl"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["futures"] }
regex = "1.10.3"
reqwest = "0.11.24"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
